--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="./style.css" rel="stylesheet">
-	<title>Welcome</title>
+	<title>Welcome </title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 
 		<div class="content-desc">
 
-			<h1> Explore Maharashtra forts</h1>
+			<h1> Explore forts of Maharashtra </h1>
 
 			<a class="btn" href="./index.html">Explore here</a>
 
